--- a/app/src/main/res/layout/cardview_plato.xml
+++ b/app/src/main/res/layout/cardview_plato.xml
@@ -3,31 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-<<<<<<< HEAD
-<<<<<<< HEAD
     android:clipToPadding="false"
     android:orientation="vertical">
-=======
-=======
->>>>>>> develop
-    android:clipToPadding="true"
-    android:dividerPadding="20dp"
-    android:orientation="vertical"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="5dp">
-<<<<<<< HEAD
->>>>>>> develop
-=======
->>>>>>> develop
 
     <androidx.cardview.widget.CardView
         android:id="@+id/platoCV"
         android:layout_width="match_parent"
-<<<<<<< HEAD
-<<<<<<< HEAD
-        android:layout_height="150dp"
+
+        android:layout_height="156dp"
         android:clipToPadding="false"
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp"
@@ -35,34 +18,16 @@
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/card_gradient"
-=======
-=======
->>>>>>> develop
-        android:layout_height="149dp"
-        android:paddingTop="10dp"
-        app:cardBackgroundColor="#FF6363"
-        app:cardCornerRadius="8dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="false">
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#D0B6B6B6"
-<<<<<<< HEAD
->>>>>>> develop
-=======
->>>>>>> develop
-            android:orientation="horizontal">
+            android:background="@drawable/card_gradient"
+            android:orientation="horizontal"
+            >
 
             <ImageView
                 android:id="@+id/imageView"
-<<<<<<< HEAD
-<<<<<<< HEAD
-                android:layout_width="125dp"
+
+                android:layout_width="215dp"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="5dp"
                 android:layout_marginVertical="5dp"
@@ -70,73 +35,38 @@
                 app:srcCompat="@drawable/plato" />
 
             <LinearLayout
-                android:layout_width="260dp"
-                android:layout_height="match_parent"
-                android:layout_margin="5dp"
-=======
-=======
->>>>>>> develop
-                android:layout_width="287dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
-
-            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-<<<<<<< HEAD
->>>>>>> develop
-=======
->>>>>>> develop
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/nombrePlatoCV"
-<<<<<<< HEAD
-<<<<<<< HEAD
                     android:layout_width="match_parent"
-                    android:layout_height="96dp"
+                    android:layout_height="wrap_content"
                     android:gravity="center|center_horizontal"
                     android:textColor="#000000"
-                    android:textSize="24sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
-                    android:gravity="right|center_horizontal|center_vertical"
-=======
-=======
->>>>>>> develop
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:textAlignment="viewEnd"
                     android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/descripcionPlatoCV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+                    android:textColor="#000000" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
-<<<<<<< HEAD
->>>>>>> develop
-=======
->>>>>>> develop
-                    android:orientation="horizontal">
+                    android:gravity="right"
+                    android:orientation="horizontal"
+                    android:padding="2dp">
 
                     <TextView
                         android:id="@+id/precioPlatoCV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-<<<<<<< HEAD
-<<<<<<< HEAD
                         android:layout_margin="2dp"
                         android:paddingRight="5dp"
                         android:textAlignment="center"
@@ -153,27 +83,9 @@
                         android:text="@string/verDetallesCV"
                         android:textAllCaps="false"
                         android:textColor="#000000" />
-
-=======
-=======
->>>>>>> develop
-                        android:layout_weight="1"
-                        android:paddingBottom="8dp"
-                        android:textAlignment="center" />
-
-                    <TextView
-                        android:id="@+id/caloriasPlatoCV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingRight="5dp"
-                        android:paddingBottom="8dp"
-                        android:textAlignment="center" />
-<<<<<<< HEAD
->>>>>>> develop
-=======
->>>>>>> develop
                 </LinearLayout>
             </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </android.widget.LinearLayout>
