--- a/app/src/main/res/layout/cardview_plato.xml
+++ b/app/src/main/res/layout/cardview_plato.xml
@@ -67,22 +67,39 @@
                         android:id="@+id/precioPlatoCV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="2dp"
+                        android:layout_gravity="center|left"
+                        android:layout_marginHorizontal="2dp"
                         android:paddingRight="5dp"
-                        android:textAlignment="center"
+                        android:text="$1000"
                         android:textColor="#000000" />
 
                     <Button
-                        android:id="@+id/detalles"
+                        android:id="@+id/detallesButtonCV"
                         android:layout_width="wrap_content"
                         android:layout_height="23dp"
                         android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_marginHorizontal="2dp"
+                        android:layout_weight="0"
                         android:background="@drawable/button_rounded"
                         android:fontFamily="sans-serif"
                         android:gravity="center_horizontal|center_vertical"
-                        android:text="@string/verDetallesCV"
+                        android:text="Detalles"
                         android:textAllCaps="false"
                         android:textColor="#000000" />
+
+                    <Button
+                        android:id="@+id/pedirButtonCV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="23dp"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:layout_marginHorizontal="2dp"
+                        android:background="@drawable/button_rounded"
+                        android:fontFamily="sans-serif"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:text="@string/pedirCV"
+                        android:textAllCaps="false"
+                        android:textColor="#000000" />
+
                 </LinearLayout>
             </LinearLayout>
 
