--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -11,11 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="20dp"
-
         android:textColor="#000000"
-
-
-
         android:selectAllOnFocus="false"
         android:shadowRadius="10"
         android:text="@string/nuevoPlato"
@@ -30,6 +26,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/tituloPlato"
+        android:inputType="text"
         android:paddingVertical="18dp" />
 
     <EditText
