Lab-05, Firebase y mapas

--- a/app/src/main/res/layout/activity_nuevo_plato.xml
+++ b/app/src/main/res/layout/activity_nuevo_plato.xml
@@ -69,6 +69,12 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/agregarFoto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="agregar foto" />
+
+    <Button
         android:id="@+id/guardarPlato"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
