--- a/app/src/main/res/layout/activity_nuevo_pedido.xml
+++ b/app/src/main/res/layout/activity_nuevo_pedido.xml
@@ -45,6 +45,7 @@
             android:ems="10"
             android:hint="@string/numero"
             android:inputType="number" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -53,6 +54,14 @@
         android:orientation="vertical"
         android:paddingTop="10dp"
         android:paddingBottom="10dp">
+
+        <Button
+            android:id="@+id/ubicacionButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:isScrollContainer="true"
+            android:text="Ubicacion"
+            android:drawableEnd="@drawable/ic_location"/>
 
         <TextView
             android:layout_width="match_parent"
