--- a/app/src/main/res/menu/home_menu_toolbar.xml
+++ b/app/src/main/res/menu/home_menu_toolbar.xml
@@ -6,20 +6,17 @@
         android:id="@+id/registrar"
         android:icon="@drawable/ic_baseline_person_add_24"
         android:title="@string/registrarToolbar"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/crearItem"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/crearPlatoToolbar"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
     <item
         android:id="@+id/listarItems"
         android:icon="@drawable/ic_baseline_list_24"
         android:title="@string/listarPlatosToolbar"
-        app:showAsAction="ifRoom" />
-        android:icon="@android:drawable/ic_input_add"
-        android:title="registrar"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always" />
 
 
 </menu>
